--- a/css/style.css
+++ b/css/style.css
@@ -850,7 +850,8 @@ form label {
   #fh5co-header .display-tc h1,
   #fh5co-counter .display-tc h1,
   .fh5co-cover .display-tc h1 {
-    font-size: 30px;
+    font-size: 50px;
+    margin-top: 20px;
   }
 }
 #fh5co-header .display-tc h2,
